trained my own pystan regression model and pickled it

--- a/prototyping/solution_prototyping.ipynb
+++ b/prototyping/solution_prototyping.ipynb
@@ -425,7 +425,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>56</td>\n",
+       "      <td>63</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -449,7 +449,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>55</td>\n",
+       "      <td>54</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -473,7 +473,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>63</td>\n",
+       "      <td>54</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -497,7 +497,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>56</td>\n",
+       "      <td>45</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -569,7 +569,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>34</td>\n",
+       "      <td>41</td>\n",
        "      <td>5.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -593,7 +593,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>42</td>\n",
+       "      <td>45</td>\n",
        "      <td>5.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -617,7 +617,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>41</td>\n",
+       "      <td>47</td>\n",
        "      <td>5.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -641,7 +641,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>40</td>\n",
+       "      <td>44</td>\n",
        "      <td>5.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -665,7 +665,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>41</td>\n",
+       "      <td>44</td>\n",
        "      <td>5.8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -714,17 +714,17 @@
        "208             0             0             0             0             0   \n",
        "\n",
        "     seas_week_48  Electronics  unemployment_rate  \n",
-       "0               0           56                7.0  \n",
-       "1               0           55                7.0  \n",
-       "2               0           63                7.0  \n",
-       "3               0           56                7.0  \n",
+       "0               0           63                7.0  \n",
+       "1               0           54                7.0  \n",
+       "2               0           54                7.0  \n",
+       "3               0           45                7.0  \n",
        "4               0           52                7.0  \n",
        "..            ...          ...                ...  \n",
-       "204             0           34                5.8  \n",
-       "205             0           42                5.8  \n",
-       "206             0           41                5.8  \n",
-       "207             0           40                5.8  \n",
-       "208             0           41                5.8  \n",
+       "204             0           41                5.8  \n",
+       "205             0           45                5.8  \n",
+       "206             0           47                5.8  \n",
+       "207             0           44                5.8  \n",
+       "208             0           44                5.8  \n",
        "\n",
        "[209 rows x 82 columns]"
       ]
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 209 entries, 0 to 208\n",
-      "Data columns (total 82 columns):\n",
+      "Data columns (total 83 columns):\n",
       " #   Column                    Non-Null Count  Dtype         \n",
       "---  ------                    --------------  -----         \n",
       " 0   wk_strt_dt                209 non-null    datetime64[ns]\n",
@@ -834,14 +834,22 @@
       " 79  seas_week_48              209 non-null    int64         \n",
       " 80  Electronics               209 non-null    int32         \n",
       " 81  unemployment_rate         209 non-null    float64       \n",
-      "dtypes: datetime64[ns](1), float64(17), int32(1), int64(63)\n",
-      "memory usage: 134.7 KB\n"
+      " 82  is_holiday_week           209 non-null    int32         \n",
+      "dtypes: datetime64[ns](1), float64(17), int32(2), int64(63)\n",
+      "memory usage: 135.5 KB\n"
      ]
     }
    ],
    "source": [
     "new_df.info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -875,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +903,7 @@
        "Name: is_holiday_week, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +963,7 @@
        " 'seas_week_48']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1043,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>56</td>\n",
+       "      <td>63</td>\n",
        "      <td>7.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1059,7 +1067,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>55</td>\n",
+       "      <td>54</td>\n",
        "      <td>7.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1083,7 +1091,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>63</td>\n",
+       "      <td>54</td>\n",
        "      <td>7.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1107,7 +1115,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>56</td>\n",
+       "      <td>45</td>\n",
        "      <td>7.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1179,7 +1187,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>34</td>\n",
+       "      <td>41</td>\n",
        "      <td>5.8</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1203,7 +1211,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>42</td>\n",
+       "      <td>45</td>\n",
        "      <td>5.8</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1227,7 +1235,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>41</td>\n",
+       "      <td>47</td>\n",
        "      <td>5.8</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1251,7 +1259,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>40</td>\n",
+       "      <td>44</td>\n",
        "      <td>5.8</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1275,7 +1283,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>41</td>\n",
+       "      <td>44</td>\n",
        "      <td>5.8</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1312,17 +1320,17 @@
        "208    3106708       450       108614  ...  599.000000          0.325676   \n",
        "\n",
        "     mrkdn_pdm  va_pub_0.15  va_pub_0.2  va_pub_0.25  va_pub_0.3  Electronics  \\\n",
-       "0     0.368029            1           0            0           0           56   \n",
-       "1     0.360911            1           0            0           0           55   \n",
-       "2     0.344832            1           1            0           0           63   \n",
-       "3     0.356973            1           1            0           0           56   \n",
+       "0     0.368029            1           0            0           0           63   \n",
+       "1     0.360911            1           0            0           0           54   \n",
+       "2     0.344832            1           1            0           0           54   \n",
+       "3     0.356973            1           1            0           0           45   \n",
        "4     0.359990            0           1            0           0           52   \n",
        "..         ...          ...         ...          ...         ...          ...   \n",
-       "204   0.371423            0           1            0           0           34   \n",
-       "205   0.372676            0           1            1           0           42   \n",
-       "206   0.363597            0           0            1           0           41   \n",
-       "207   0.360448            0           1            0           0           40   \n",
-       "208   0.362766            0           1            0           0           41   \n",
+       "204   0.371423            0           1            0           0           41   \n",
+       "205   0.372676            0           1            1           0           45   \n",
+       "206   0.363597            0           0            1           0           47   \n",
+       "207   0.360448            0           1            0           0           44   \n",
+       "208   0.362766            0           1            0           0           44   \n",
        "\n",
        "     unemployment_rate  is_holiday_week  \n",
        "0                  7.0                0  \n",
@@ -1340,7 +1348,7 @@
        "[209 rows x 42 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1352,8 +1360,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1414,6 +1424,22 @@
    "source": [
     "df_no_hldy_seas.info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_no_hldy_seas.to_csv('../data_cleaned.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2291,13 +2317,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Pystan & Bayesian Modeling\n"
-   ]
   }
  ],
  "metadata": {
