added monthly gdp and cpi functionality to .make_dataframe()

--- a/prototyping/make_dataframe.ipynb
+++ b/prototyping/make_dataframe.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 64,
    "metadata": {
     "scrolled": true
    },
@@ -38,28 +38,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "iv = pd.date_range(date_1_c, \n",
     "                   date_2_c, \n",
-    "                   freq='W-SUN', \n",
-    "                   closed='right')"
+    "                   freq='W-SUN')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "66"
+       "209"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,33 +69,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DatetimeIndex(['2019-08-04', '2019-08-11', '2019-08-18', '2019-08-25',\n",
-       "               '2019-09-01', '2019-09-08', '2019-09-15', '2019-09-22',\n",
-       "               '2019-09-29', '2019-10-06', '2019-10-13', '2019-10-20',\n",
-       "               '2019-10-27', '2019-11-03', '2019-11-10', '2019-11-17',\n",
-       "               '2019-11-24', '2019-12-01', '2019-12-08', '2019-12-15',\n",
-       "               '2019-12-22', '2019-12-29', '2020-01-05', '2020-01-12',\n",
-       "               '2020-01-19', '2020-01-26', '2020-02-02', '2020-02-09',\n",
-       "               '2020-02-16', '2020-02-23', '2020-03-01', '2020-03-08',\n",
-       "               '2020-03-15', '2020-03-22', '2020-03-29', '2020-04-05',\n",
-       "               '2020-04-12', '2020-04-19', '2020-04-26', '2020-05-03',\n",
-       "               '2020-05-10', '2020-05-17', '2020-05-24', '2020-05-31',\n",
-       "               '2020-06-07', '2020-06-14', '2020-06-21', '2020-06-28',\n",
-       "               '2020-07-05', '2020-07-12', '2020-07-19', '2020-07-26',\n",
-       "               '2020-08-02', '2020-08-09', '2020-08-16', '2020-08-23',\n",
-       "               '2020-08-30', '2020-09-06', '2020-09-13', '2020-09-20',\n",
-       "               '2020-09-27', '2020-10-04', '2020-10-11', '2020-10-18',\n",
-       "               '2020-10-25', '2020-11-01'],\n",
-       "              dtype='datetime64[ns]', freq='W-SUN')"
+       "DatetimeIndex(['2014-08-03', '2014-08-10', '2014-08-17', '2014-08-24',\n",
+       "               '2014-08-31', '2014-09-07', '2014-09-14', '2014-09-21',\n",
+       "               '2014-09-28', '2014-10-05',\n",
+       "               ...\n",
+       "               '2018-05-27', '2018-06-03', '2018-06-10', '2018-06-17',\n",
+       "               '2018-06-24', '2018-07-01', '2018-07-08', '2018-07-15',\n",
+       "               '2018-07-22', '2018-07-29'],\n",
+       "              dtype='datetime64[ns]', length=209, freq='W-SUN')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +240,7 @@
     "        end_date_ts = pd.Timestamp(end_date)\n",
     "\n",
     "        df = pd.DataFrame()\n",
-    "        df['date'] = pd.date_range(start_date_ts, end_date_ts, freq = 'W-SUN', closed = 'right')\n",
+    "        df['date'] = pd.date_range(start_date_ts, end_date_ts, freq = 'W-SUN')\n",
     "        df['date_row_yr_mth'] = [item for item in zip(df['date'].dt.year, df['date'].dt.month)]\n",
     "\n",
     "        if include_econ_indicators:\n",
@@ -289,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "metadata": {
     "scrolled": false
    },
@@ -324,38 +313,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2014-08-10</td>\n",
+       "      <td>2014-08-03</td>\n",
        "      <td>7.0</td>\n",
        "      <td>1809135.0</td>\n",
        "      <td>125.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2014-08-17</td>\n",
+       "      <td>2014-08-10</td>\n",
        "      <td>7.0</td>\n",
        "      <td>1809135.0</td>\n",
        "      <td>125.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2014-08-24</td>\n",
+       "      <td>2014-08-17</td>\n",
        "      <td>7.0</td>\n",
        "      <td>1809135.0</td>\n",
        "      <td>125.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2014-08-31</td>\n",
+       "      <td>2014-08-24</td>\n",
        "      <td>7.0</td>\n",
        "      <td>1809135.0</td>\n",
        "      <td>125.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2014-09-07</td>\n",
-       "      <td>6.9</td>\n",
-       "      <td>1816399.0</td>\n",
-       "      <td>125.8</td>\n",
+       "      <td>2014-08-31</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1809135.0</td>\n",
+       "      <td>125.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -365,35 +354,35 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>203</th>\n",
+       "      <th>204</th>\n",
        "      <td>2018-07-01</td>\n",
        "      <td>5.8</td>\n",
        "      <td>1952354.0</td>\n",
        "      <td>134.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>204</th>\n",
+       "      <th>205</th>\n",
        "      <td>2018-07-08</td>\n",
        "      <td>5.8</td>\n",
        "      <td>1952354.0</td>\n",
        "      <td>134.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>205</th>\n",
+       "      <th>206</th>\n",
        "      <td>2018-07-15</td>\n",
        "      <td>5.8</td>\n",
        "      <td>1952354.0</td>\n",
        "      <td>134.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>206</th>\n",
+       "      <th>207</th>\n",
        "      <td>2018-07-22</td>\n",
        "      <td>5.8</td>\n",
        "      <td>1952354.0</td>\n",
        "      <td>134.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>207</th>\n",
+       "      <th>208</th>\n",
        "      <td>2018-07-29</td>\n",
        "      <td>5.8</td>\n",
        "      <td>1952354.0</td>\n",
@@ -401,27 +390,27 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>208 rows × 4 columns</p>\n",
+       "<p>209 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "          date  unemployment_rate  monthly_gdp  monthly_cpi\n",
-       "0   2014-08-10                7.0    1809135.0        125.7\n",
-       "1   2014-08-17                7.0    1809135.0        125.7\n",
-       "2   2014-08-24                7.0    1809135.0        125.7\n",
-       "3   2014-08-31                7.0    1809135.0        125.7\n",
-       "4   2014-09-07                6.9    1816399.0        125.8\n",
+       "0   2014-08-03                7.0    1809135.0        125.7\n",
+       "1   2014-08-10                7.0    1809135.0        125.7\n",
+       "2   2014-08-17                7.0    1809135.0        125.7\n",
+       "3   2014-08-24                7.0    1809135.0        125.7\n",
+       "4   2014-08-31                7.0    1809135.0        125.7\n",
        "..         ...                ...          ...          ...\n",
-       "203 2018-07-01                5.8    1952354.0        134.3\n",
-       "204 2018-07-08                5.8    1952354.0        134.3\n",
-       "205 2018-07-15                5.8    1952354.0        134.3\n",
-       "206 2018-07-22                5.8    1952354.0        134.3\n",
-       "207 2018-07-29                5.8    1952354.0        134.3\n",
+       "204 2018-07-01                5.8    1952354.0        134.3\n",
+       "205 2018-07-08                5.8    1952354.0        134.3\n",
+       "206 2018-07-15                5.8    1952354.0        134.3\n",
+       "207 2018-07-22                5.8    1952354.0        134.3\n",
+       "208 2018-07-29                5.8    1952354.0        134.3\n",
        "\n",
-       "[208 rows x 4 columns]"
+       "[209 rows x 4 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
