Added ".get_forecasts()" function. Returns plot of forecasted kpi

--- a/prototyping/Visualizations.ipynb
+++ b/prototyping/Visualizations.ipynb
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,11 +816,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "mmm_model = pickle.load(open(filename,'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mmm_model.extract_mmm"
    ]
   },
   {
